--- a/ProjectManagement/Views/Shared/_Side_navbar.cshtml
+++ b/ProjectManagement/Views/Shared/_Side_navbar.cshtml
@@ -29,8 +29,8 @@
             <i class="fas fa-caret-right"></i>Project Log Frame
         </strong>
         <ul class="sub-menu">
-            <li><a class="links" href="/ProjectLogFrame/LogFrame/@Model">Log Frame</a></li>
-            <li><a class="links" href="/ProjectLogFrame/LogFrameIndicator/@Model">Log Frame Indicator</a></li>
+            <li><a class="links" href="/ProjectLogFrame/LogFrameIndicator/@Model">Log Frame</a></li>
+            @*<li><a class="links" href="/ProjectLogFrame/LogFrameIndicator/@Model">Log Frame Indicator</a></li>*@
         </ul>
     </li>
     <li>
