--- a/ProjectManagement/wwwroot/pages-css/log-frame-indicator.css
+++ b/ProjectManagement/wwwroot/pages-css/log-frame-indicator.css
@@ -1,4 +1,5 @@
-﻿
+﻿.select-wrapper input.select-dropdown { margin: 0 0 .50rem; }
+
 @-webkit-keyframes fadeIn {
     from { opacity: 0; }
     to { opacity: 1; }
