change location name

--- a/ProjectManagement/Views/Projects/AddProject.cshtml
+++ b/ProjectManagement/Views/Projects/AddProject.cshtml
@@ -100,17 +100,17 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <select asp-items="@ViewBag.Country" id="selectCountry" class="mdb-select md-form m-0" searchable="Search here..">
-                            <option value="" disabled selected>Country</option>
+                            <option value="" disabled selected>District</option>
                         </select>
                     </div>
                     <div class="col-lg-4">
                         <select id="selectState" class="mdb-select md-form m-0" searchable="Search here..">
-                            <option value="" disabled selected>State</option>
+                            <option value="" disabled selected>Sub-District</option>
                         </select>
                     </div>
                     <div class="col-lg-4">
                         <select id="selectCity" class="mdb-select md-form m-0" searchable="Search here..">
-                            <option value="" disabled selected>City</option>
+                            <option value="" disabled selected>Village</option>
                         </select>
                     </div>
                 </div>
