--- a/ProjectManagement/Views/Settings/Country.cshtml
+++ b/ProjectManagement/Views/Settings/Country.cshtml
@@ -6,12 +6,12 @@
 
 
 <div class="container">
-    <h4 class="page-header mb-3">Country</h4>
+    <h4 class="page-header mb-3">District</h4>
     <div class="card mb-3 px-3 py-2">
         <form id="formAdd">
             <div class="md-form input-group">
                 <input id="inputCountryName" type="text" class="form-control" required>
-                <label for="inputCountryName">Country Name</label>
+                <label for="inputCountryName">District</label>
 
                 <div class="input-group-append">
                     <button class="btn btn-md btn-custom-bg m-0 px-3" type="submit">Add</button>
