--- a/ProjectManagement/Views/Settings/State.cshtml
+++ b/ProjectManagement/Views/Settings/State.cshtml
@@ -5,20 +5,20 @@
 }
 
 <div class="container">
-    <h4 class="page-header mb-3">State</h4>
+    <h4 class="page-header mb-3">Sub-District</h4>
     <div class="card mb-3 px-3 py-2">
         <form id="formAdd">
             <div class="row">
                 <div class="col">
                     <select asp-items="@ViewBag.Country" id="selectCountry" class="mdb-select md-form" searchable="Search here.." required>
-                        <option value="" disabled selected>Country</option>
+                        <option value="" disabled selected>District</option>
                     </select>
                 </div>
 
                 <div class="col">
                     <div class="md-form input-group">
                         <input id="inputStateName" type="text" class="form-control" required>
-                        <label for="inputStateName">State Name</label>
+                        <label for="inputStateName">Sub-District</label>
 
                         <div class="input-group-append">
                             <button class="btn btn-md btn-custom-bg m-0 px-3" type="submit">Add</button>
