--- a/ProjectManagement/Views/Shared/_AdminLayout.cshtml
+++ b/ProjectManagement/Views/Shared/_AdminLayout.cshtml
@@ -36,8 +36,6 @@
     <div id="sidedrawer" class="d-print-none z-depth-1">
         <Partial Name="_AdminLoginPartial" />
         <Partial Name="_Side_navbar" model="@ViewContext.RouteData.Values["id"]" />
-
-   
     </div>
 
     <main id="content-wrapper">
@@ -74,7 +72,7 @@
     <script src="https://unpkg.com/imask"></script>
     <!--sidebar-->
     <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
-    <script src="~/js/sidedrawer-links.js"></script>
+    <script src="~/js/sidedrawer-links.js?v=1.1"></script>
     <script src="~/js/sidedrawer-show-hide.js"></script>
 
     <!-- others js -->
