--- a/ProjectManagement/Views/Shared/_Side_navbar.cshtml
+++ b/ProjectManagement/Views/Shared/_Side_navbar.cshtml
@@ -72,9 +72,9 @@
             <li><a class="links" href="/Settings/ProjectStatus/@Model">Status</a></li>
             <li><a class="links" href="/Settings/ProjectDonor/@Model">Donor</a></li>
             <li><a class="links" href="/Settings/BeneficiaryType/@Model">Beneficiary</a></li>
-            <li><a class="links" href="/Settings/Country/@Model">Country</a></li>
-            <li><a class="links" href="/Settings/State/@Model">State</a></li>
-            <li><a class="links" href="/Settings/City/@Model">City</a></li>
+            <li><a class="links" href="/Settings/Country/@Model">District</a></li>
+            <li><a class="links" href="/Settings/State/@Model">Sub-District</a></li>
+            <li><a class="links" href="/Settings/City/@Model">Village</a></li>
             <li><a class="links" href="/Settings/ReportType/@Model">Report Type</a></li>
         </ul>
     </li>
